# slint

./: .clang-format  .clippy.toml  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.toml  .taplo.toml  AGENTS.md  AMBASSADORS.md  ANDROID_CPP.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.short  Cross.toml  DocumentationGaps.md  FAQ.md  LICENSE.COMMERCIAL  LICENSE.md  README.md  README_zh.md  REUSE.toml  Readme.md  SECURITY.md  about.toml  biome.json  cspell.json  espflash.toml  extension.toml  flake.nix  (+10 more)
api/cpp/: CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.rs  lib.rs  platform.rs
api/deno/: Cargo.toml
api/dotnet/: Cargo.toml  build.rs
api/js/: Cargo.toml  build.rs
api/napi/: .gitignore  .yarnrc.yml  Cargo.toml  README.md  build.rs  cover.md  index.d.ts  index.js  index.ts  package.json
api/node/: .gitignore  .npmignore  .yarnrc.yml  Cargo.toml  README.md  binaries-dev.json  binaries.json  binding.d.cts  biome.json  biome.test.json  build-on-demand.mjs  build.rs  cover.md  index.ts  loader.mjs  package-lock.json  package.json  register.mjs  slint-loader.mjs  thirdparty.hbs  tsconfig.e2e.json  tsconfig.json  vitest.config.ts
api/python/: .gitignore  Cargo.toml  README.md  brush.rs  build_docs.py  errors.rs  image.rs  interpreter.rs  lib.rs  models.rs  noxfile.py  pyproject.toml  thirdparty.hbs  timer.rs  value.rs
api/sixtyfps-cpp/: CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.rs  lib.rs
api/sixtyfps-rs/: Cargo.toml  README.md  build.rs  compile_fail_tests.rs  docs  docs.rs  lib.rs  migration.md  repeater.rs  sixtyfps-docs-highlight.html  sixtyfps-docs-integration.html
api/sixtyfps-wasm-interpreter/: Cargo.toml
api/slint-sc/: Cargo.toml  README.md  api.rs  lib.rs  private_unstable_api.rs
api/swift/: .gitignore  Cargo.toml  Package.swift  lib.rs
api/wasm-interpreter/: Cargo.toml  package.json  tsconfig.json
component-sets/material/: Cargo.toml  README.md  material.slint
demos/: CMakeLists.txt  Cargo.toml  README.md
demos/energy-monitor/: Cargo.toml  README.md  build.rs  build_for_ios_with_cargo.bash  index.html  ios-project.yml  main.js  package.json
demos/home-automation/: Cargo.toml  README.md  index.html  package.json  test.slint
demos/launcher/: Cargo.toml  README.md  build.rs  input_device_monitor.rs  main.rs
demos/printerdemo/: README.md  printerdemo.pot
demos/printerdemo_mcu/: Cargo.toml  README.md  bench.rs  build.rs  main.rs
demos/usecases/: update_translations.sh
demos/weather-demo/: Cargo.toml  README.md  main.js  package.json
demos/zephyr-common/: prj.conf  slint-zephyr.cpp  west-rza3m.yaml  west.yaml
examples/: CMakeLists.txt  Cargo.toml  README.md  data-uri-test.slint
examples/7gui/: Cargo.toml  booker.60  booker.rs  booker.slint  cells.60  circledraw.60  circledraw.slint  counter.60  counter.slint  crud.60  tempconv.60  tempconv.slint  timer.60  timer.slint
examples/7guis/: Cargo.toml  README.md  booker.rs  booker.slint  cells.rs  cells.slint  circledraw.rs  circledraw.slint  counter.slint  crud.rs  crud.slint  lib.rs  tempconv.slint  timer.rs  timer.slint
examples/async-io/: Cargo.toml  README.md  main.py  main.rs  pyproject.toml  stockticker.slint
examples/bash/: README.md  laptop.svg.license  simple_input.sh  sysinfo.60  sysinfo.slint  sysinfo_linux.sh  sysinfo_macos.sh
examples/bazel_build/: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md
examples/bevy/: Cargo.toml  Cross.toml  README.md  main.rs  slint_bevy_adapter.rs  web_asset.rs
examples/bevy-hosts-slint/: CLAUDE.md  Cargo.toml  README.md  main.rs
examples/bevy-hosts-slint-gpu/: Cargo.toml  main.rs
examples/calculator-android/: Cargo.toml
examples/carousel/: README.md
examples/carousel_mcu/: Cargo.toml  README.md  build.rs  main.rs
examples/cpp/: README.md
examples/cpptest/: .gitignore  CMakeLists.txt  hello.60  main.cpp
examples/custom_event_loop/: Cargo.toml  build.rs
examples/custom_window_demo/: main.slint
examples/dial/: README.md  dial.slint
examples/dnd-kanban/: CMakeLists.txt  Cargo.toml  build.rs  index.html  kanban.cpp  kanban.slint  main.js  main.py  main.rs  package.json  pyproject.toml
examples/energy-monitor/: Cargo.toml  README.md  build.rs  index.html
examples/energy_mng/: Cargo.toml  README.md  build.rs
examples/esp-launcher/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/fancy-switches/: DarkModeSwitch.slint  README.md  SunMoonSwitch.slint  demo.slint
examples/fancy_demo/: Cargo.toml  README.md  build.rs  main.60  main.rs  main.slint
examples/ffmpeg/: Cargo.toml  README.md  build.rs  lib.rs  main.rs  player.rs  scene.slint
examples/fullscreen_toggle/: CMakeLists.txt  Cargo.toml  fullscreen_toggle.cpp  fullscreen_toggle.slint  main.rs
examples/gallery/: CMakeLists.txt  Cargo.toml  README.md  build.rs  gallery.60  gallery.pot  gallery.slint  index.html  main.cpp  main.rs  thumbsup.png.license  update_translations.sh
examples/garbage/: supersimple.60
examples/graphicstest/: Cargo.toml  README  index.html
examples/gstreamer/: Cargo.toml  build.rs  main.rs  ui.slint
examples/gstreamer-player/: Cargo.toml  README.md  build.rs  egl_integration.rs  main.rs  scene.slint  software_rendering.rs
examples/gstreamer_player/: Cargo.toml  README.md  scene.slint
examples/gstreamer_slint_demo/: Cargo.toml  README.md  main.rs  video.rs
examples/imagefilter/: Cargo.toml  README.md  cat_preview_round.png.license  imagefilter.60  index.html  main.rs
sixtyfps_compiler/: Cargo.toml  build.rs  builtin_macros.rs  builtins.60  diagnostics.rs  embedded_resources.rs  expression_tree.rs  expressions.rs  fileaccess.rs  generator.rs  langtype.rs  layout.rs  lexer.rs  lib.rs  literals.rs  load_builtins.rs  lookup.rs  lower.rs  main.rs  namedreference.rs  object_tree.rs  parser.rs  passes.rs  typeloader.rs  typeregister.rs
tests/: Cargo.toml  run_tests.sh
xtask/: Cargo.toml
(+7757 files in other folders)
