# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

# Workspace for the Slint examples.
#
# This is a separate workspace from the repository root so that editing the
# library crates does not require rust-analyzer / cargo to load all the
# examples (which pull in the `slint!` proc-macro). It shares the repository
# `target/` directory (see `.cargo/config.toml`) and uses the same `[profile]`
# settings as the root workspace so that the common library artifacts are
# reused instead of rebuilt.
[workspace]
members = [
  '7guis',
  'async-io',
  'carousel/rust',
  'dnd-kanban',
  'ffmpeg',
  'gallery',
  'gstreamer-player',
  'imagefilter/rust',
  'maps',
  'mcu-board-support',
  'memory',
  'navigation',
  'navigation-federated',
  'navigation-std',
  'native-gestures',
  'opengl_texture',
  'opengl_underlay',
  'plotter',
  'runtime_key_bindings/rust',
  'slide_puzzle',
  'speedometer/rust',
  'system-tray',
  'todo/rust',
  'todo-mvc/rust',
  'virtual_keyboard/rust',
  'wgpu_texture',
  'bevy/slint-hosts-bevy',
  'bevy/bevy-hosts-slint',
  'bevy/bevy-hosts-slint-gpu',
  'servo',
]

# safe-ui keeps its own workspace because of its custom MCU `[profile]`
# (opt-level = "s"), which can only be set at a workspace root.
#
# mcu-embassy and uefi-demo keep their own workspaces because they cannot build
# for the host: mcu-embassy defaults to its `mcu` feature (cortex-m / embassy,
# ARM-only) and uefi-demo's dependencies are all `cfg(target_os = "uefi")`.
# Keeping them out of this workspace lets a plain `cargo build` (and rust-analyzer)
# work here without their embedded-only toolchains. They are built separately in
# CI against their respective targets.
exclude = ['safe-ui', 'mcu-embassy', 'uefi-demo']

resolver = "3"

[workspace.package]
description = "GUI toolkit to efficiently develop fluid graphical user interfaces for embedded devices and desktop applications"
authors = ["Slint Developers <info@slint.dev>"]
documentation = "https://slint.dev/docs"
edition = "2024"
homepage = "https://slint.dev"
keywords = ["gui", "toolkit", "graphics", "design", "ui"]
license = "GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0"
repository = "https://github.com/slint-ui/slint"
rust-version = "1.92"
version = "1.18.0"

[workspace.dependencies]
# These are path dependencies on workspace members. The `version` pin is required
# by `cargo xtask check_license_headers` (REUSE compliance), which enforces that
# every slint/i-slint path dependency specifies `version = "=<workspace version>"`.
i-slint-backend-testing = { version = "=1.18.0", path = "../internal/backends/testing", default-features = false }
i-slint-core = { version = "=1.18.0", path = "../internal/core", default-features = false }
i-slint-renderer-software = { version = "=1.18.0", path = "../internal/renderers/software", default-features = false }

bytemuck = { version = "1.13.1" }
cfg_aliases = { version = "0.2.2" }
derive_more = { version = "2.0.0", default-features = false, features = ["deref", "deref_mut", "into", "from", "add", "add_assign", "mul", "not", "display"] }
glow = { version = "0.17" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
wgpu-29 = { package = "wgpu", version = "29", default-features = false }

# WARNING: keep every `[profile.*]` setting below identical to the root
# workspace's Cargo.toml. cargo keys its build cache on the profile, so any
# divergence makes the shared `target/` directory (see `.cargo/config.toml`)
# rebuild the common library crates for this workspace instead of reusing them.
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# Always build resvg and its hot-path dependencies with optimizations,
# as it otherwise causes freezes to load large SVGs in debug builds.
[profile.dev.package.resvg]
opt-level = 3
[profile.dev.package.usvg]
opt-level = 3
[profile.dev.package.tiny-skia]
opt-level = 3
[profile.dev.package.rgb]
opt-level = 3
