[package]
name = "sixtyfps-compilerlib"
version = "0.1.4"
authors = ["SixtyFPS <info@sixtyfps.io>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-only"
description = "Internal SixtyFPS compiler library"
repository = "https://github.com/sixtyfpsui/sixtyfps"
homepage = "https://sixtyfps.io"


[lib]
path = "lib.rs"

[features]
# Generators
cpp = []
rust = ["quote", "proc-macro2"]

# Support for proc_macro spans in the token (only useful for use within a proc macro)
proc_macro_span = ["quote", "proc-macro2"]

# Feature to print the diagnostics to the console
display-diagnostics = ["codemap", "codemap-diagnostic"]


[dependencies]
num_enum = "0.5.1"
rowan = "0.14.1"
smol_str = "0.1.17"
derive_more = "0.99.5"
codemap-diagnostic = { version = "0.1.1", optional = true }
codemap = { version = "0.1", optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0.17", optional = true }
lyon_path = { version = "0.17.4" }
lyon_svg = { version = "0.17.2" }
thiserror = "1"
by_address = "1.0.4"
css-color-parser2 = "1.0.1"
itertools = "0.10"
once_cell = "1"
url = "2.2.1"
dunce = "1.0.1"
linked_hash_set = "0.1.4"

[dev-dependencies]
regex = "1.3.7"
parser_test_macro = { path = "./parser_test_macro" }
spin_on = "0.1"
